style.css
/* ... */
@font-face {
  font-family: "Caladea";
  src: url("asset/font/Caladea/Caladea-Bold.woff2");
  /* src: url("asset/font/Caladea/Caladea-Bold.ttf"); */
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Caladea";
  src: url("asset/font/Caladea/Caladea-Italic.woff2");
  /* src: url("asset/font/Caladea/Caladea-Italic.ttf"); */
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: "Caladea";
  src: url("asset/font/Caladea/Caladea-BoldItalic.woff2");
  /* src: url("asset/font/Caladea/Caladea-BoldItalic.ttf"); */
  font-weight: 700;
  font-style: italic;
}

  
@font-face {
  font-family: "Wagon";
  src: url("asset/font/Wagon/Wagon-Bold.woff2");
  /* src: url("asset/font/Wagon/Wagon-Bold.otf"); */
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Wagon";
  src: url("asset/font/Wagon/Wagon-ExtraLight.woff2");
  /* src: url("asset/font/Wagon/Wagon-ExtraLight.otf"); */
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: "Wagon";
  src: url("asset/font/Wagon/Wagon-ExtraLightItalic.woff2");
  /* src: url("asset/font/Wagon/Wagon-ExtraLightItalic.otf"); */
  font-weight: 200;
  font-style: italic;
}




/*--------- TITRAGES ---------*/

body{
  cursor:default;
}

h1{
    font-family: "Wagon", sans-serif;
    font-weight: 700;
    margin:0;
    /* background-color: #161b27; */
    color: #274e12; /*#004b81*/
    font-size: 4.69vw; /*5em*/
    margin-left:5vw;
  }

#h1-1{
  margin-top:2vh;
}

h1.sous-titre{
  font-family: "Wagon", sans-serif;
  font-weight: 700;
    font-size: 2.34vw; /*2.5em*/
    /* font-weight: lighter; */
    margin-left:5vw;
}

a.sous-titre{
  color: #161b27;
  background-color: #d8b1ed;
  /* cursor: default; */
}

#stt1{
  margin-top:2.25vh;
}

h2{
  font-family: "Wagon", sans-serif;
  font-weight: 700;
    color: #d8b1ed;
    font-size: 1.87vw; /*2em*/
    margin: 5% 0;
    scroll-margin-top: 4.63vh; /*2.6em*/
}

h3{
  font-family: "Wagon", sans-serif;
  font-weight: 200;
    /* font-weight: lighter; */
    color: #274e12;
    font-size: 1.73vw; /*1.85em*/
    margin: 5% 0;
    scroll-margin-top: 4.81vh; /*2.7em*/
}

h4{
  font-family: "Wagon", sans-serif;
  font-weight: 200;
  font-style: italic;
    /* font-weight: lighter; */
    color: #004b81;
    font-size: 1.59vw; /*1.7em*/
    margin: 5% 0;
    scroll-margin-top: 4.81vh; /*2.7em*/  
}

h5{
  font-family: "Caladea", serif;
  font-weight: 700;
    color:#161b27;
    font-size: 1.12vw; /*1.2em*/
}

p{
  font-family: "Caladea", serif;
  font-weight: 400;
    color: #161b27;
    font-size: 1.03vw; /*1.1em*/
    text-align:justify;
    text-align-last: left;
    margin: 5% 0;
    margin-bottom: 10%;
    line-height: 1.3;   /*interlignage : valeur en unités relatives (ex: 1.5 ou 1.6)*/
    /*letter-spacing: 0.1em;  interlettrage */
    word-spacing: 0.05vw;   /*Augmente l'espacement entre les mots*/
    hyphens: auto;   /*Active la césure automatique*/
    hyphenate-character: auto; /*précise quel tiret pour la césure : '~'*/
    hyphenate-limit-chars: 10 4 4;
    /*-ms-hyphens: auto;       Pour les anciens navigateurs IE
    -moz-hyphens: auto;      Pour Firefox
    -webkit-hyphens: auto;   Pour WebKit (Chrome, Safari) */
    /*widows: 2;
    orphans: 2; garantit qu’il y a au moins deux lignes de texte dans un paragraphe qui finit sur une ligne*/
    text-justify: inter-word;
}

.remerciements p{
  text-align: left;
}


/*--------- STYLE LIENS ---------*/

a{
    cursor:pointer;
    overflow-wrap: break-word; /*coupe les liens trop longs */
    word-break: break-word; /*pareil mais plus radical, à utiliser qu'en exception*/
  }

  a:not([href]) { /* a sans liens href renseignés*/
    /* cursor: text; */
    pointer-events: none;
}

I{
  font-family: "Caladea", serif;
  font-weight: 400;
  font-style: italic;
}

  .lien{
    color: #faadde;
    background-color: #161b27;
  }

  .lien:hover{
    color: #f5f5f5;
  }
  
  .titre-oeuvre{
    font-family: "Caladea", serif;
    font-weight: 400;
    font-style: italic;
    color: #274e12;
    background-color: #e9e4d8;
    text-decoration: none;
    /* scroll-margin-top: 2rem; */
  }
  
  .column2 a.titre-oeuvre {
    cursor:pointer;
  }

  /* .column3 a.titre-oeuvre {
    cursor:text;
  } */

  .artiste{
    color: #ffb47e;
    background-color: #161b27;
    text-decoration: none;
    /* scroll-margin-top: 2rem; */
  }

  .artiste:hover{
    color: #f5f5f5;
  }
  
  .auteur{
    color: #e9e4d8;
    background-color: #274e12;
    text-decoration: none;
    /* scroll-margin-top: 2rem; */
  }
  
  .auteur:hover{
    color: #f5f5f5;
  }

  .bibliographie .titre-ouvrage { /*style spécifique à la section bibliographie*/
    font-family: "Caladea", serif;
    font-weight: 400;
    font-style: italic;
    color: #f5f5f5;
    text-decoration: none;
  }

  .notes .titre-ouvrage { /*style spécifique à la section notes*/
    font-family: "Caladea", serif;
    font-weight: 400;
    font-style: italic;
    color: #d8b1ed;
    text-decoration: none;
  }

  .titre-article{ /*apparaît seulement en bibliographie*/
    color: #f5f5f5;
  }

  .column2 .appel-notes {
    color:#161b27;
    text-decoration: underline;
    text-decoration-color: #d8b1ed;
    text-decoration-style: solid;
  }

  .column3 .appel-notes {
    color:#f5f5f5;
    text-decoration: underline;
    text-decoration-color: #d8b1ed;
    text-decoration-style: solid;
  }

  .appel-notes:hover{
    color: #f5f5f5;
    background-color: #d8b1ed;
    text-decoration: underline;
    text-decoration-color: #f5f5f5;
    text-decoration-style: solid;
  }

  .fig{
    color:#d8b1ed;
    background-color: #343332;
    text-decoration: none;
  }

  .fig:hover{
    color: #f5f5f5;
  }

  /* :target { cibles des ancres
    scroll-margin-top: 500px; Décale proprement l’ancre 
}*/

/*--------- GENERAL ---------*/

body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    /* font-family: Arial, Helvetica, sans-serif; */
}
/* ... */

